--- a/my-app/.env
+++ b/my-app/.env
@@ -1,2 +1,2 @@
-YOUTOUBE_API = "AIzaSyChqRJnFuVfgl165RsIjYJOGukRUVy8Qz0"
+REACT_APP_YOUTOUBE_API = "AIzaSyChqRJnFuVfgl165RsIjYJOGukRUVy8Qz0"
 REACT_APP_NOT_SECRET_CODE = "abcdef"
